<resources>
    <string name="app_name">Park Explorer</string>

    <!-- app actions (Example: menu selection) -->

    <!-- Textview Strings -->
    <string name="searchHint">Search for topic…</string>
    <string name="no_results">No results found for %1$s, please try again</string>

    <!-- Textview Content Descriptions -->
    <string name="no_results_cd">No results found when searching</string>

    <!-- Placeholder Text -->
    <string name="park_name_placeholder">Full Name</string>
    <string name="park_shortname_placeholder">Short Name</string>
    <string name="park_location_placeholder">Location</string>
    <string name="park_designation_placeholder">Designation</string>
    <string name="park_code_placeholder">Park Code</string>

    <!-- Button Text -->
    <string name="park_filter">filter</string>

</resources>