<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    Toolbar
        -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/Base.Theme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <!--
    Loading
        -->
    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="12dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <!--
    No Results Text
        -->
    <TextView
        android:id="@+id/noResultsFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/no_results_cd"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/no_results"
        android:textColor="?android:attr/colorControlNormal"
        android:textSize="18sp"
        android:visibility="gone" />

    <!--
    Main Recycler View
        -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@id/appbar"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:fastScrollEnabled="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/topicFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/park_filter"
        android:theme="@style/FabExtendedMaterialTheme"
        app:srcCompat="@drawable/ic_filter_list"
        app:iconTint="?android:colorControlNormal" />

    <!--
     android:scrollbarThumbVertical="@drawable/thumb_drawable"
    app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
    app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
    app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
    app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"

    -->



</RelativeLayout>
